@@ -71,7 +71,10 @@ public class IvyDERuntimeClasspathEntryResolver implements IRuntimeClasspathEntr
         }
         IvyClasspathContainer ivycp = (IvyClasspathContainer) container;
         if (ivycp.getConf().isInheritedResolveBeforeLaunch()) {
-            ivycp.launchResolve(false, false, new NullProgressMonitor());
+            IStatus status = ivycp.launchResolve(false, false, new NullProgressMonitor());
+            if (status.getCode() != IStatus.OK) {
+                throw new CoreException(status);
+            }
         }
         IClasspathEntry[] cpes = container.getClasspathEntries();
         int property = -1;
