@@ -23,6 +23,7 @@
 - FIX: Ivy Classpath Contributed to Dependent Projects When not Exported (IVYDE-193)
 - FIX: Incorrect project:// path in the ivysettings configuration make the UI crash (IVYDE-203)
 - FIX: conf attributes must not be null (IVYDE-209) (thanks to Ivica Loncar)
+- FIX: Errors are not reported when multiple resolve are launched (IVYDE-219)
 
   version 2.0.0 final
 ==========================
